started parsing result

--- a/DictionaryApp/.classpath
+++ b/DictionaryApp/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="E:/workspace/java libraries/json/json-20180130.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/java libraries/json/jackson-all-1.9.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
